# orc

./: .gitattributes  .gitignore  .pre-commit-config.yaml  README.md  build-and-install.sh  build.sh  config.md  go.sh  install.sh  make.sh  pyproject.toml  upload.sh  yolink-list-devices.py
.github/workflows/: python-package.yml
data/: pyproject.toml
orc/: api.py  config.py  control.py  dal.py  model.py  runner.py  view.py  worker.py
orc/static/: manifest.json  orc.css
orc/templates/: base.html  button.html  config.html  orc.html  schedule.html
scripts/: build-and-install.sh  install.sh  run-tests.sh
src/: config.md
src/orc/: __init__.py  _build.py  _decorators.py  _locked_dict.py  api.py  apscheduler.py  config.py  dal.py  locale.py  model.py  plugins.py  runner.py  view.py
src/orc/dal/: __init__.py  _decorators.py  broadlink.py  bws.py  chromecast.py  discovery.py  feeds.py  hubitat.py  lgtv.py  lights.py  sqlite.py  tv.py  usb.py  yolink.py
src/orc/static/: button.js  manifest.json  orc.css  orc.js  presence.js  schedule.js  tailwind.min.css  tailwind.src.css
src/orc/templates/: base.html  button.html  config.html  log.html  macros.html  presence.html  schedule.html
tests/: conftest.py  test_api.py  test_dal.py  test_model.py  test_view.py
