[build-system]
build-backend = "hatchling.build"
requires = [
    "hatchling >= 1.26",
]

[project]
dependencies = [
    "APScheduler==3.11.0",
    "Flask==3.1.3",
    "bitwarden-sdk==2.0.0",
    "icalendar==7.0.3",
    "mistletoe==1.5.1",
    "numpy==2.3.3",
    "piper-tts==1.4.1",
    "pygame==2.6.1",
    "recurring-ical-events==3.8.1",
    "requests==2.33.0",
    "sounddevice==0.5.5",
    "suntime==1.3.2"
]
name = "orc"
version = "0.0.1"

[project.optional-dependencies]
test = [
    "mock==5.2.0",
    "pytest==9.0.3",
]

[project.scripts]
orc = "orc.worker:main"
test = "orc.worker:test"

[tool.black]
line-length = 140

[tool.isort]
profile = "black"
src_paths = ["src/orc"]

[tool.pytest.ini_options]
minversion = "9.0"
pythonpath = [ "src" ]
testpaths = [ "tests" ]

[tool.hatch.build.targets.wheel]
packages = ["src/orc"]
include = ["src/orc/pkg"]


