[build-system]
build-backend = "hatchling.build"
requires = [
    "hatchling >= 1.26",
]

[project]
dependencies = [
    "APScheduler==3.11.2",
    "Flask==3.1.3",
    "SQLAlchemy==2.0.50",
    "aiowebostv==0.7.5",
    "skyfield==1.54",
    "bitwarden-sdk==2.1.0",
    "getmac==0.9.5",
    "gunicorn==26.0.0",
    "icalendar==7.1.2",
    "icmplib==3.0.4",
    "mistletoe==1.5.1",
    "orc_data==0.0.1",
    "piper-tts==1.4.2",
    "pychromecast==14.0.10",
    "paho-mqtt==2.1.0",
    "pygame==2.6.1",
    "recurring-ical-events==3.8.2",
    "requests==2.34.2",
    "wakeonlan==3.3.0",
    "yt-dlp==2026.6.9",
]
name = "orc"
version = "0.0.1"

[project.optional-dependencies]
test = [
    "freezegun==1.5.5",
    "pytest==9.0.3",
]
lint = [
    "black==26.5.1",
    "isort==8.0.1",
    "pyflakes==3.4.0",
]
build = [
    "twine==6.2.0",
    "build==1.5.0",
]

[project.scripts]
orc = "orc.runner:web"

[tool.black]
line-length = 140

[tool.isort]
profile = "black"
src_paths = ["src/orc"]
known_third_party = ["apscheduler"]

[tool.pytest.ini_options]
minversion = "9.0"
pythonpath = [ "src", "data/src" ]
testpaths = [ "tests" ]
filterwarnings = "ignore::UserWarning:pygame"

[tool.hatch.build.targets.wheel]
packages = ["src/orc"]


