[build-system]
build-backend = "hatchling.build"
requires = [
    "hatchling >= 1.26",
]

[project]
dependencies = [
    "APScheduler==3.11.2",
    "aiowebostv==0.7.5",
    "broadlink==0.19.0",
    "Flask==3.1.3",
    "SQLAlchemy==2.0.51",
    "skyfield==1.54",
    "bitwarden-sdk==2.1.0",
    "gunicorn==26.0.0",
    "icalendar==7.2.0",
    "icmplib==3.0.4",
    "mistletoe==1.5.1",
    "orc_data==0.0.1",
    "piper-tts==1.4.2",
    "pychromecast==14.0.10",
    "paho-mqtt==2.1.0",
    "audioop-lts==0.2.1; python_version >= '3.13'",
    "pyaudio==0.2.14",
    "recurring-ical-events==3.8.2",
    "requests==2.34.2",
    "yt-dlp==2026.6.9",
]
name = "orc"
version = "0.0.1"
requires-python = ">=3.11"

[project.optional-dependencies]
test = [
    "freezegun==1.5.5",
    "pytest==9.1.1",
]
lint = [
    "black==26.5.1",
    "isort==8.0.1",
    "pyflakes==3.4.0",
]
build = [
    "twine==6.2.0",
    "build==1.5.0",
]

[project.scripts]
orc = "orc.runner:web"

[tool.black]
line-length = 140

[tool.isort]
profile = "black"
src_paths = ["src/orc"]
known_third_party = ["apscheduler"]

[tool.pytest.ini_options]
minversion = "9.0"
pythonpath = [ "src", "data/src" ]
testpaths = [ "tests" ]

[tool.hatch.build.targets.wheel]
packages = ["src/orc"]

[[tool.uv.index]]
name = "private"
url = "http://registry.int.exussum.org"
explicit = true

[tool.uv.sources]
orc_data = {index = "private"}


